# usbbldr

./: .gitignore  CMakeLists.txt  README.md  USB.h  USBBldr.h  usbdescbuilder.c  usbdescbuilder.h
source/: CMakeLists.txt  gtest-all-guard.cpp
source/USBDescBuilder/: CMakeLists.txt  USB.h  USBBldr.h  USBDescBuilderTest.cpp  USBExtras.h  UVC.h  UVCDescriptor.h  doxyfile.txt  usb_descriptor.h  usbdescbuilder.c  usbdescbuilder.h
source/USBDescBuilderTest/: CMakeLists.txt  USBDescBuilderTest.cpp  USBDescBuilderTest.h
source/googletest/include/gtest/: gtest-param-test.h  gtest-param-test.h.pump  gtest-printers.h  gtest-test-part.h  gtest.h
source/googletest/include/gtest/internal/: gtest-internal.h  gtest-param-util-generated.h  gtest-param-util-generated.h.pump  gtest-port.h
source/googletest/src/: gtest-internal-inl.h  gtest.cc
